nenolod     2005/09/23 04:30:02 UTC	(20050923-2303)
  Log:
  charybdis TS6 fixes

  Modified:
	trunk/protocol/charybdis.c (File Modified) 


nenolod     2005/09/23 04:12:31 UTC	(20050923-2301)
  Log:
  MySQL detection fixes.
  

  Modified:
	trunk/configure (File Modified) 
	trunk/configure.ac (File Modified) 


nenolod     2005/09/23 04:10:02 UTC	(20050923-2299)
  Log:
  - TS6ify charybdis protocol support.
  - Optimize m_nick() stuff in several protocol modules.
  - Add IP tracking for IRCd's that we know how to handle it with.
  

  Modified:
	trunk/include/extern.h (File Modified) 
	trunk/include/users.h (File Modified) 
	trunk/protocol/asuka.c (File Modified) 
	trunk/protocol/bahamut.c (File Modified) 
	trunk/protocol/bircd.c (File Modified) 
	trunk/protocol/charybdis.c (File Modified) 
	trunk/protocol/dreamforge.c (File Modified) 
	trunk/protocol/hyperion.c (File Modified) 
	trunk/protocol/inspircd.c (File Modified) 
	trunk/protocol/ircnet.c (File Modified) 
	trunk/protocol/monkey.c (File Modified) 
	trunk/protocol/plexus.c (File Modified) 
	trunk/protocol/ptlink.c (File Modified) 
	trunk/protocol/ratbox.c (File Modified) 
	trunk/protocol/scylla.c (File Modified) 
	trunk/protocol/shadowircd.c (File Modified) 
	trunk/protocol/sorcery.c (File Modified) 
	trunk/protocol/undernet.c (File Modified) 
	trunk/protocol/unreal.c (File Modified) 
	trunk/src/node.c (File Modified) 


pfish       2005/09/22 22:30:59 UTC	(20050922-2297)
  Log:
  display a _channels_ metadata
  

  Modified:
	trunk/modules/chanserv/taxonomy.c (File Modified) 


pfish       2005/09/22 22:26:32 UTC	(20050922-2295)
  Log:
  fix close help
  

  Modified:
	trunk/modules/chanserv/help.c (File Modified) 


pfish       2005/09/21 22:13:03 UTC	(20050921-2293)
  Log:
  use me.actual instead of me.name here (fixes synch timer wallops)
  

  Modified:
	trunk/protocol/unreal.c (File Modified) 


nenolod     2005/09/21 19:19:24 UTC	(20050921-2291)
  Log:
  Add a note about viewsvn.atheme.org.
  
